--- a/index.html
+++ b/index.html
@@ -381,7 +381,12 @@
                 <div class="subscribe">
                     <label for="" class="subscrybe-title">Подпишитесь на рассылку</label>
                     <input type="email" id="subscrybe-title" class="subscrybe-input" placeholder="E-mail">
-                    <button type="submit" class="subscribe-submit">Подписаться</button>
+                    <button type="submit" class="subscribe-submit">
+                        Подписаться
+                        <svg class="subscrybe-icon" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#icon-send"></use>
+                        </svg>
+                    </button>
                 </div>
             </div>
         </footer>
@@ -394,20 +399,43 @@
                 </button>
                 <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
                 <form class="user-form">
-                    <label for="user-name">Имя</label>
-                    <input type="text" class="user-name" id="user-name">
-                    <label for="user-tel">Телефон</label>
-                    <input type="tel" class="user-tel" id="user-tel">
-                    <label for="user-email">Почта</label>
-                    <input type="email" class="user-email" id="user-email">
-                    <label for="user-feedback">Комментарий</label>
-                    <textarea name="" id="user-feedback" class="user-feedback" placeholder="Введите текст"></textarea>
-                    <input type="checkbox" class="user-mail" id="user-agreement">
-                    <label for="user-agreement">
-                        Соглашаюсь с рассылкой и принимаю
-                        <a>Условия договора</a>
-                    </label>
-
+                    <div>
+                        <label for="user-name">Имя</label>
+                        <input 
+                        type="text"
+                        class="user-input" 
+                        id="user-name">
+                    </div>
+                    <div>
+                        <label for="user-tel">Телефон</label>
+                        <input 
+                        type="tel" 
+                        class="user-input" 
+                        id="user-tel">
+                    </div>
+                    <div>
+                        <label for="user-email">Почта</label>
+                        <input 
+                        type="email" 
+                        class="user-input" 
+                        id="user-email">
+                    </div>
+                    <div class="form-feedback">
+                        <label for="user-feedback">Комментарий</label>
+                        <textarea 
+                        name="" 
+                        id="user-feedback" 
+                        class="user-feedback" 
+                        placeholder="Введите текст"></textarea>
+                    </div>
+                    <div>
+                        <input type="checkbox" class="user-mail" id="user-agreement">
+                        <label for="user-agreement" class="user-agreement">
+                            Соглашаюсь с рассылкой и принимаю
+                            <a href="">Условия договора</a>
+                        </label>
+                    </div>
+                     
                     <button class="submit" type="submit">Отправить</button>
                 </form>
             </div>
