--- a/portfolio.html
+++ b/portfolio.html
@@ -247,6 +247,16 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe">
+                <label for="" class="subscrybe-title">Подпишитесь на рассылку</label>
+                <input type="email" id="subscrybe-title" class="subscrybe-input" placeholder="E-mail">
+                <button type="submit" class="subscribe-submit">
+                    Подписаться
+                    <svg class="subscrybe-icon" width="24" height="24">
+                        <use href="./images/symbol-defs.svg#icon-send"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
         
     </footer>
