--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h2 class="visually-hidden features-title">Наши особенности</h2>
                     <ul class="features-list list">
                         <li class="features-item">
-                            <div href="" class="features-link link">
+                            <div class="features-link link">
                                 <svg class="features-icon" width="70" height="70">
                                     <use href="./images/symbol-defs.svg#icon-antenna"></use>
                                 </svg>
@@ -69,7 +69,7 @@
                             <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="features-item">
-                            <div href="" class="features-link link">
+                            <div class="features-link link">
                                 <svg class="features-icon" width="70" height="70">
                                     <use href="./images/symbol-defs.svg#icon-clock"></use>
                                 </svg>
@@ -78,7 +78,7 @@
                             <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li class="features-item">
-                            <div href="" class="features-link link">
+                            <div class="features-link link">
                                 <svg class="features-icon" width="70" height="70">
                                     <use href="./images/symbol-defs.svg#icon-diagram"></use>
                                 </svg>
@@ -87,7 +87,7 @@
                             <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="features-item">
-                            <div href="" class="features-link link">
+                            <div class="features-link link">
                                 <svg class="features-icon" width="70" height="70">
                                     <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                                 </svg>
@@ -379,7 +379,7 @@
                     </ul>
                 </div>
                 <div class="subscribe">
-                    <label for="" class="subscrybe-title">Подпишитесь на рассылку</label>
+                    <label for="subscrybe-title" class="subscrybe-title">Подпишитесь на рассылку</label>
                     <input type="email" id="subscrybe-title" class="subscrybe-input" placeholder="E-mail">
                     <button type="submit" class="subscribe-submit">
                         Подписаться
@@ -392,7 +392,7 @@
         </footer>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button tipe="button" class="modal-close" data-modal-close>
+                <button class="modal-close" type="button" data-modal-close>
                     <svg class="modal-icon" width="30" height="30">
                         <use href="./images/symbol-defs.svg#icon-close"></use>
                     </svg>
@@ -458,7 +458,7 @@
                                     <use href="./images/symbol-defs.svg#icon-checkbox"></use>
                                 </svg>
                             </span>
-                            Соглашаюсь с рассылкой и принимаю&nbsp
+                            Соглашаюсь с рассылкой и принимаю   
                             <a href="" class="link-agreemant">Условия договора</a>
                         </label>
                     </div>
