--- a/portfolio.html
+++ b/portfolio.html
@@ -248,7 +248,7 @@
                 </ul>
             </div>
             <div class="subscribe">
-                <label for="" class="subscrybe-title">Подпишитесь на рассылку</label>
+                <label for="subscrybe-title" class="subscrybe-title">Подпишитесь на рассылку</label>
                 <input type="email" id="subscrybe-title" class="subscrybe-input" placeholder="E-mail">
                 <button type="submit" class="subscribe-submit">
                     Подписаться
